--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,16 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  --foreground-rgb: 1, 1, 1;
+  --background-start-rgb: rgba(255, 255, 255, 0);
   --background-end-rgb: 255, 255, 255;
+
+  --background-color: #000;
+  --foreground-color: #fff;
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
@@ -86,13 +89,12 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: var(--foreground-color);
+  background-image: linear-gradient(to bottom, #000, #222222);
+}
+
+section {
+  margin-block: 4rem;
 }
 
 a {
