--- a/app/page.module.css
+++ b/app/page.module.css
@@ -115,3 +115,20 @@
 .icons_copyright a {
   text-decoration: underline;
 }
+
+.hero_heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.profile_image {
+  border-radius: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .hero_heading {
+    flex-direction: column;
+  }
+}
