--- a/app/page.module.css
+++ b/app/page.module.css
@@ -43,6 +43,16 @@
   transition: all 0.2s ease-in-out;
 }
 
+.project_image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 200px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
 .description {
   display: inherit;
   justify-content: inherit;
@@ -65,6 +75,7 @@
   position: relative;
   margin: 0;
   margin-block: 1rem;
+  line-height: 1.5rem;
 }
 
 .heading_1 {
