--- a/app/globals.css
+++ b/app/globals.css
@@ -89,6 +89,7 @@ body {
 }
 
 body {
+  position: relative;
   color: var(--foreground-color);
   background-image: linear-gradient(to bottom, #000, #222222);
 }
@@ -99,7 +100,7 @@ section {
 
 a {
   color: inherit;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 @media (prefers-color-scheme: dark) {
