--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 :root {
+  color-scheme: dark;
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
@@ -90,8 +91,6 @@ body {
 
 body {
   position: relative;
-  color: var(--foreground-color);
-  background-image: linear-gradient(to bottom, #000, #222222);
 }
 
 section {
