--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,4 +1,5 @@
 .main {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -47,6 +48,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  object-fit: cover;
   width: 100%;
   height: 200px;
   border-radius: 5px;
@@ -137,6 +139,15 @@
 
 .profile_image {
   border-radius: 100%;
+}
+
+.theme_button {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  border: none;
+  background: none;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
