--- a/app/page.module.css
+++ b/app/page.module.css
@@ -56,7 +56,7 @@
   justify-content: center;
   align-items: center;
   object-fit: cover;
-  width: 100%;
+  width: auto;
   height: 200px;
   border-radius: 5px;
   overflow: hidden;
