--- a/app/page.module.css
+++ b/app/page.module.css
@@ -92,18 +92,28 @@
   font-weight: 600;
   margin-block: 1rem;
 
-  /** TEXT GRADIENT */
-  color: #424242;
-  background-image: -webkit-linear-gradient(
-    0deg,
-    #424242 0%,
-    #33474d 39%,
-    #e0e0e0 74%
+  background: linear-gradient(
+    to right,
+    #7953cd 20%,
+    #016894 30%,
+    #013045 70%,
+    #764ada 80%
   );
-  background-clip: text;
   -webkit-background-clip: text;
-  text-fill-color: transparent;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-fill-color: transparent;
+  background-size: 500% auto;
+  animation: textShine 10s ease-in-out infinite alternate;
+}
+
+@keyframes textShine {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
 }
 
 .heading_2 {
@@ -152,6 +162,17 @@
 
 .profile_image {
   border-radius: 100%;
+  opacity: 0;
+  animation: fade-in 0.5s ease-in-out 0.5s forwards;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .theme_button {
