fix form text color

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,7 @@
 :root {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
   color-scheme: dark;
   --icon-background: #858585;
   --max-width: 1100px;
