--- a/app/page.module.css
+++ b/app/page.module.css
@@ -92,6 +92,19 @@
   resize: none;
 }
 
+.validation_error {
+  display: block;
+  margin-block: 0.5rem;
+  font-size: 0.85rem;
+  color: #ff0000;
+  display: none;
+}
+
+.validation_error.show {
+  display: block;
+  animation: fade-in 0.5s ease-in-out forwards;
+}
+
 .description {
   display: inherit;
   justify-content: inherit;
