--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -37,8 +37,11 @@
   align-items: center;
   width: 100%;
   margin-block: 2rem;
-  padding-block: 2rem;
+  padding: 5rem 2rem;
   overflow: visible;
+  background-color: #0d030f;
+  border: 1px solid rgba(var(--card-border-rgb), 0.1);
+  border-radius: 5px;
 }
 
 .skills {
@@ -164,6 +167,14 @@
   color: var(--heading2-color);
   font-family: var(--font-mono);
   letter-spacing: 2px;
+  margin-block: 1rem;
+  background-color: transparent;
+}
+
+.skill_heading_2 {
+  color: var(--heading2-color);
+  font-family: var(--font-mono);
+  font-size: clamp(1rem, 3vw, 2rem);
   margin-block: 1rem;
   background-color: transparent;
 }
