--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -12,6 +12,12 @@
   margin-block: 1rem;
 }
 
+@media screen and (max-width: 500px) {
+  .heading_2 {
+    text-align: center;
+  }
+}
+
 .links {
   display: flex;
   gap: 1rem;
@@ -44,6 +50,9 @@
 }
 
 .projects_section {
+  background-color: var(--card-background);
+  padding: 2rem;
+  border-radius: 5px;
   opacity: 0;
   animation: fadeIn 0.5s ease-in-out 0.5s forwards;
 }
@@ -67,9 +76,9 @@
 .project {
   padding: 1rem;
   border-radius: 5px;
-  background-color: var(--card-background);
   height: 100%;
   overflow: hidden;
+  background-color: var(--body-background);
 }
 
 .project_content {
