reducing section block margin on smaller screens

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,3 +46,9 @@ a {
   color: inherit;
   text-decoration: underline;
 }
+
+@media screen and (max-width: 500px) {
+  section {
+    margin-block: 5rem;
+  }
+}
