--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,11 +4,12 @@
 
   color-scheme: dark;
   --body-background: #0c0a11;
-  --background: radial-gradient(circle, #000000 0%, #0c0a11 100%);
+  --background: radial-gradient(circle, #000000 20%, #130e1d 100%);
   --heading2-color: #a7a7a7;
   --heading3-color: #e3e3e3;
   --icon-background: #858585;
   --card-background: #161616;
+  --link-color: #9e83d3;
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
@@ -39,7 +40,7 @@ body {
 }
 
 section {
-  margin-block: 10rem;
+  margin-block: 7rem;
 }
 
 a {
