--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -24,6 +24,7 @@
 }
 
 .link {
+  color: var(--link-color);
   text-decoration: none;
 }
 
@@ -51,7 +52,7 @@
 
 .projects_section {
   background-color: var(--card-background);
-  padding: 2rem;
+  padding: 1rem;
   border-radius: 5px;
   opacity: 0;
   animation: fadeIn 0.5s ease-in-out 0.5s forwards;
@@ -68,7 +69,7 @@
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 2rem;
   margin-block: 2rem;
 }
