--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -4,8 +4,8 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem;
   min-height: 100vh;
+  padding: 1rem;
 }
 
 .hero {
@@ -18,6 +18,7 @@
   width: 100%;
   max-width: var(--max-width);
   margin-block: 2rem;
+  padding: 1rem;
 }
 
 .hero .description {
@@ -37,18 +38,21 @@
   align-items: center;
   width: 100%;
   margin-block: 2rem;
-  padding: 5rem 2rem;
+  padding: 5rem 1rem;
   overflow: visible;
-  background-color: #0d030f;
-  border: 1px solid rgba(var(--card-border-rgb), 0.1);
   border-radius: 5px;
+
+  max-width: var(--max-width);
 }
 
 .skills {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
   width: 100%;
   justify-content: center;
   text-align: center;
+  gap: 3rem;
+  margin-block-start: 2rem;
 }
 
 .skill h3 {
@@ -187,7 +191,6 @@
 
 .social_links {
   display: flex;
-  justify-content: center;
   align-items: center;
   gap: 1rem;
   margin-block: 5rem;
@@ -199,6 +202,7 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  margin-inline: 1rem;
 }
 
 .social_link_icon {
