--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@
   --background: radial-gradient(circle, #000000 20%, #130e1d 100%);
   --heading2-color: #a7a7a7;
   --heading3-color: #e3e3e3;
-  --icon-background: #858585;
+  --icon-background: #2f2347;
   --card-background: #000000;
   --link-color: #9e83d3;
   --max-width: 1100px;
