--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -3,12 +3,17 @@
   font-size: 1.1rem;
   font-family: var(--font-mono);
   background-color: transparent;
+  padding-top: 3rem;
 }
 
 .heading_3 {
   color: var(--heading3-color);
   font-family: var(--font-mono);
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  font-size: 0.85rem;
   margin-block: 1rem;
+  padding-block: 1rem;
 }
 
 @media screen and (max-width: 500px) {
@@ -27,7 +32,6 @@
 .link {
   position: relative;
   padding: 0.5rem 1rem;
-  background-color: #212121;
   color: var(--link-color);
   text-decoration: none;
   overflow: hidden;
@@ -45,7 +49,6 @@
 }
 
 .link:hover {
-  background-color: #000000;
   color: #8e8e8e;
 }
 
@@ -106,7 +109,6 @@
   border-radius: 5px;
   height: 100%;
   overflow: hidden;
-  background-color: #1a1a1a;
   border: 1px solid rgba(var(--card-border-rgb), 0.1);
   box-shadow: 10px 0 100px #7a53cd45;
   padding: 1rem;
