--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -197,9 +197,15 @@
 }
 
 .social_links {
-  display: flex;
-  gap: 2rem;
   margin-block: 5rem;
+}
+
+.social_links > ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  list-style: none;
+  padding: 0;
 }
 
 .social_link_icon {
