--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@
   --icon-background: #2f2347;
   --card-background: #000000;
   --link-color: #9e83d3;
+  --link-hover-color: #7e63b3;
   --logo-color: #cecece;
   --nav-link-color: #ffffff;
   --max-width: 1200px;
@@ -43,17 +44,39 @@ body {
 }
 
 header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  max-width: var(--max-width);
+  z-index: 100;
   display: flex;
   justify-content: space-between;
   width: 100%;
+  margin: 0 auto;
   margin-block-end: 2rem;
   padding: 1.5rem 1rem;
   align-items: center;
+  border-radius: 20px;
   nav {
     display: flex;
     gap: 1.5rem;
     align-items: center;
     height: 50px;
+  }
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-block: 2rem;
+  padding: 1rem;
+  background-color: var(--card-background);
+  border-radius: var(--border-radius);
+  color: var(--heading3-color);
+  a {
+    color: var(--link-color);
   }
 }
 
